@@ -3,13 +3,14 @@ package com.generator.tournamate.entities;
 import com.generator.tournamate.RoundNotFoundException;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class SwissTournament {
     int numberOfRounds;
     int currentRoundNumber =1;
     List<SwissPlayer> players = new ArrayList<>();
-    List<SwissRound> rounds = List.of(new SwissRound(1, players));
+    ArrayList<SwissRound> rounds = new ArrayList<>(Arrays.asList(new SwissRound(1, players)));
 
     public SwissTournament(int numberOfRounds, List<SwissPlayer> players) {
         this.numberOfRounds = numberOfRounds;
@@ -41,14 +42,15 @@ public class SwissTournament {
     }
     public void addRound(SwissRound round){
         rounds.add(round);
+        currentRoundNumber++;
     }
     @Override
     public String toString() {
-        return "SwissTournament{" +
-                "numberOfRounds=" + numberOfRounds +
-                ", currentRound=" + currentRoundNumber +
-                ", players=" + players +
-                ", rounds=" + rounds +
+        return "SwissTournament{" + '\n' +
+                "numberOfRounds=" + numberOfRounds + '\n' +
+                ", currentRound=" + currentRoundNumber + '\n' +
+                ", players=" + players + '\n' +
+                ", rounds=" + rounds + '\n' +
                 '}';
     }
 }
